--- a/html/index.html
+++ b/html/index.html
@@ -11,14 +11,14 @@
     <div class="nav"> 
     <nav>
             <div class="logo">
-             <img src="https://www.gravatar.com/avatar/9cb116a83081fca98c48f3b4899077e6?s=300"  alt="logo">
+             <img src="https://www.gravatar.com/avatar/9cb116a83081fca98c48f3b4899077e6?s="  alt="logo">
             <div class="title">
                 ProjectHut
             </div>
          </div>
          <ul> 
                <li class="active">
-                  <a href="/index.html">Home</a>
+                  <a href="http://127.0.0.1:5500/html/index.html">Home</a>
                </li>
                <li>
                 <a href="/about.html">About</a>
@@ -27,11 +27,39 @@
             <a href="/projects.html">Projects</a>
          </li>
      <li> 
-        <a href="/contact.html">Contact</a>
+        <a href="http://127.0.0.1:5500/html/contact.html">Contact</a>
       </li>
      </ul>
     </nav>
    </div>
+       <div class="banner">
+    <div class="heading">
+        <b>Welcome to ProjectHut</b>
+        <br/>
+        <small>This is where you learn technology</small>
+             </div>
+    <!--<div class="maintext">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo adipisci, porro quos distinctio ullam debitis sequi placeat repellendus corrupti nemo eveniet! Non ullam aliquam incidunt odit autem eligendi, quibusdam consectetur?
+            </div>-->
+
+           
+           <!----> <div class="subtext">
+             <div class="red">
+            <h3>HTML</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vero unde deserunt explicabo excepturi corporis, quas earum perspiciatis minus nihil quae! Tempora, est perferendis! Magnam iure velit beatae odio praesentium.</p>
+        </div>
+        <div class="blue">
+            <h3>CSS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vero unde deserunt explicabo excepturi corporis, quas earum perspiciatis minus nihil quae! Tempora, est perferendis! Magnam iure velit beatae odio praesentium.</p>
+        </div>
+        <div class="yellow">
+            <h3>Webdevelopment</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vero unde deserunt explicabo excepturi corporis, quas earum perspiciatis minus nihil quae! Tempora, est perferendis! Magnam iure velit beatae odio praesentium.</p>
+        </div>
+        
+        <blockquote class="quotes">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis cumque
+        </blockquote>
    <div class="footer">
      Copyright &copy; ProjectHut
 </body>
